# neuralflake

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data_agent/: cli.py
data_agent/core/: agent.py  config.py
data_agent/llm/: openai.py  provider.py
data_agent/rag/: chunking.py  document_processor.py  embeddings.py  retriever.py
data_agent/rag/vector_store/: base.py  chroma.py
data_agent/utils/: helpers.py  logging.py
